updated JSON generator
added file path

--- a/Assets/EventData/summer-game-jam-2023_json-converter/index.html
+++ b/Assets/EventData/summer-game-jam-2023_json-converter/index.html
@@ -72,6 +72,10 @@
                     <p>Event ID</p>
                     <input type="number" required value="-1" name="eventID" id="eventID">
                 </span>
+                <span>
+                    <p>File Path</p>
+                    <textarea   cols="40" rows="5" required name="filePath" id="filePath"></textarea>
+                </span>
             </div>
             <div>
                 <button action="submit" id="submit-button">
