updated JSON editor

--- a/Assets/EventData/summer-game-jam-2023_json-converter/index.html
+++ b/Assets/EventData/summer-game-jam-2023_json-converter/index.html
@@ -89,6 +89,11 @@
                 <button onclick="populateFromJson()">Populate From JSON</button>
             </div>
              
+            <div>
+                <h1>Generated JSON Files</h1>
+                <textarea id="json-files" cols="50" rows="10"></textarea>
+                <button onclick="exportJSON()">Export JSON</button>
+            </div>
         </form>
         <script src="./script.js"></script>
     </body>
