disabled fields in JSON parser

--- a/Assets/EventData/summer-game-jam-2023_json-converter/index.html
+++ b/Assets/EventData/summer-game-jam-2023_json-converter/index.html
@@ -91,23 +91,23 @@
              
             
             <p>prehistoric</p>
-            <textarea id="prehistoric-events" cols="50" rows="10"></textarea>
+            <textarea id="prehistoric-events" cols="50" rows="10" disabled></textarea>
             <p>civilization</p>
-            <textarea id="civilization-events" cols="50" rows="10"></textarea>
+            <textarea id="civilization-events" cols="50" rows="10" disabled></textarea>
             <p>medieval</p>
-            <textarea id="medieval-events" cols="50" rows="10"></textarea>
+            <textarea id="medieval-events" cols="50" rows="10" disabled></textarea>
             <p>colonial</p>
-            <textarea id="colonial-events" cols="50" rows="10"></textarea>
+            <textarea id="colonial-events" cols="50" rows="10" disabled></textarea>
             <p>industrial</p>
-            <textarea id="industrial-events" cols="50" rows="10"></textarea>
+            <textarea id="industrial-events" cols="50" rows="10" disabled></textarea>
             <p>information</p>
-            <textarea id="information-events" cols="50" rows="10"></textarea>
+            <textarea id="information-events" cols="50" rows="10" disabled></textarea>
             <p>space</p>
-            <textarea id="space-events" cols="50" rows="10"></textarea>
+            <textarea id="space-events" cols="50" rows="10" disabled></textarea>
             <p>galactic</p>
-            <textarea id="galactic-events" cols="50" rows="10"></textarea>
+            <textarea id="galactic-events" cols="50" rows="10" disabled></textarea>
             <p>cosmic</p>
-            <textarea id="cosmic-events" cols="50" rows="10"></textarea>
+            <textarea id="cosmic-events" cols="50" rows="10" disabled></textarea>
 
             <div>
                 <h1>Generated JSON Files</h1>
