added more scenarios and images

--- a/Assets/EventData/summer-game-jam-2023_json-converter/index.html
+++ b/Assets/EventData/summer-game-jam-2023_json-converter/index.html
@@ -108,6 +108,8 @@
             <textarea id="galactic-events" cols="50" rows="10" disabled></textarea>
             <p>cosmic</p>
             <textarea id="cosmic-events" cols="50" rows="10" disabled></textarea>
+            <p>singularity</p>
+            <textarea id="singularity-events" cols="50" rows="10" disabled></textarea>
 
             <div>
                 <h1>Generated JSON Files</h1>
